--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   width: 100dvw;
   overflow-x: hidden;
   height: 100%;
-
+overflow-y: hidden;
 
   background: #000;
   border-color: #3b3b3b;
@@ -97,7 +97,7 @@ canvas {
   }
 
   .hero-title {
-    @apply text-center font-semibold text-[#ffffff]  md:text-2xl
+    @apply text-center font-semibold text-[#ffffff]  text-4xl max-sm:text-xl
   }
 
   .hiw-title {
