--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ font-weight: 300;
 
 body {
   color: white;
+
   width: 100dvw;
   overflow-x: hidden;
   height: 100%;
@@ -69,7 +70,7 @@ canvas {
   }
 
   .section-heading {
-    @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
+    @apply text-white lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
   }
 
   .feature-text {
